# PHAFD

./: CMakeLists.txt  README.md  compile.bash  globalparams.cpp  globalparams.hpp  run.cpp  run.hpp
examples/: hybridpython_p0.data  hybridpython_p1.data  hybridpython_p2.data  hybridpython_p3.data  input.in  read.in  reading.in  restart.in  run.bash  simple_p0.data  simple_p1.data  simple_p2.data  write_hybrid.py
examples/polymercoords/: initpolymers.bash  initpolymers.in
examples/test/: genpoints.py  initpolymers.in  reading.in  tenper  write_data.py
src/: CMakeLists.txt  atom.cpp  atom.hpp  comm_brick.cpp  comm_brick.hpp  compute.cpp  compute.hpp  compute_complex.cpp  compute_complex.hpp  compute_grid_clusters.cpp  compute_grid_clusters.hpp  compute_pair.cpp  compute_pair.hpp  conjugate.cpp  conjugate.hpp  conjugate_volfrac.cpp  conjugate_volfrac.hpp  domain.cpp  domain.hpp  dump.cpp  dump.hpp  fix.cpp  fix.hpp  fixatom.cpp  fixatom.hpp  fixatom_drag.cpp  fixatom_drag.hpp  fixatom_semiflexible.cpp  fixatom_semiflexible.hpp  fixgrid.cpp  fixgrid.hpp  fixgrid_ave.cpp  fixgrid_ave.hpp  fixgrid_conjugate.cpp  fixgrid_conjugate.hpp  fixgrid_floryhuggins.cpp  fixgrid_floryhuggins.hpp  fixgrid_gradphi.cpp  fixgrid_gradphi.hpp  grid.cpp  (+60 more)
