add_executable(test main_test.cpp phafd.cpp atom.cpp domain.cpp grid.cpp comm_brick.cpp neighbor.cpp group.cpp input.cpp nbin.cpp nbin_standard.cpp neigh_list.cpp  npair.cpp npair_grid_bin.cpp npair_half_bin_newton.cpp nstencil.cpp nstencil_full_bin_3d.cpp nstencil_half_bin_3d.cpp my_page.cpp utility.cpp read_atoms.cpp fixatom.cpp fixatom_semiflexible.cpp fixgrid.cpp fixgrid_conjugate.cpp pair.cpp pair_gridatom_gaussian.cpp pair_lj_cut.cpp pair_grid_floryhuggins.cpp)

target_link_libraries(test PUBLIC MPI::MPI_CXX PkgConfig::PSPDE PkgConfig::FFTW ${FFTW_MPI_LIB} PkgConfig::BEADRODPMER Eigen3::Eigen)
